--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap demo</title>
+    <title>Virtual Card</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -47,12 +47,12 @@
             <p style="color: aliceblue;">You Complete me</p>
             
             <div class="book">
-                    <p>To My Love ❤️,<br><br>
-                        I treasure every little thing about you 🫶. The way you speak, the way your eyes light up when you’re happy ✨, the way you care for others with such sincerity—it all makes me fall for you over and over again 🥺.<br><br>
+                    <p>To My Love Allan❤️,<br><br>
+                        I treasure every little thing about you. The way you speak, the way your eyes light up when you’re happy ✨, the way you care for others with such sincerity—it all makes me fall for you over and over again 🥺.<br><br>
                         You inspire me to be better 🌱, to dream bigger 🌈, and to love harder 💞.<br><br>
-                        I want you to know that my love for you isn’t fleeting or fragile 🪷. It’s enduring and steadfast, a promise written in the stars 🌠. I promise to stand by you through life’s highs and lows 🚀⛰️, to celebrate your victories 🎉, and to hold you in your struggles 🤝.<br><br>
+                        I want you to know that my love for you isn’t fleeting or fragile. It’s enduring. I promise to stand by you through life’s highs and lows 🚀⛰️, to celebrate your victories 🎉, and to hold you in your struggles 🤝.<br><br>
                         Forever and always,<br>  
-                        Yours 🐻❤️
+                        Yours and Forever 🐻Tallam❤️
                     </p>
                     <div class="cover">
                         <p></p>
