--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         You inspire me to be better 🌱, to dream bigger 🌈, and to love harder 💞.<br><br>
                         I want you to know that my love for you isn’t fleeting or fragile. It’s enduring. I promise to stand by you through life’s highs and lows 🚀⛰️, to celebrate your victories 🎉, and to hold you in your struggles 🤝.<br><br>
                         Forever and always,<br>  
-                        Yours and Forever 🐻Tallam❤️
+                        Yours 🐻Tallam❤️
                     </p>
                     <div class="cover">
                         <p></p>
